0026538: Visualization - Infinite growth of maxtrix stack in OpenGl_Structure::Render

Test case for issue CR26538
Small correction